--- a/package.json
+++ b/package.json
@@ -34,26 +34,26 @@
         "update-all-packages": "npx npm-check-updates -u"
     },
     "dependencies": {
-        "@aws-sdk/client-codebuild": "^3.866.0",
-        "@aws-sdk/client-ecr": "^3.864.0",
-        "@aws-sdk/client-s3": "^3.864.0",
-        "@aws-sdk/client-secrets-manager": "^3.864.0",
-        "@aws-sdk/client-sts": "^3.864.0",
-        "@aws-sdk/credential-provider-ini": "^3.864.0",
-        "@aws-sdk/lib-storage": "^3.864.0",
-        "@aws-sdk/s3-presigned-post": "^3.864.0",
-        "@aws-sdk/s3-request-presigner": "^3.864.0",
+        "@aws-sdk/client-codebuild": "^3.879.0",
+        "@aws-sdk/client-ecr": "^3.879.0",
+        "@aws-sdk/client-s3": "^3.879.0",
+        "@aws-sdk/client-secrets-manager": "^3.879.0",
+        "@aws-sdk/client-sts": "^3.879.0",
+        "@aws-sdk/credential-provider-ini": "^3.879.0",
+        "@aws-sdk/lib-storage": "^3.879.0",
+        "@aws-sdk/s3-presigned-post": "^3.879.0",
+        "@aws-sdk/s3-request-presigner": "^3.879.0",
         "@casl/ability": "^6.7.3",
-        "@clerk/nextjs": "^6.30.1",
-        "@faker-js/faker": "^9.9.0",
+        "@clerk/nextjs": "^6.31.8",
+        "@faker-js/faker": "^10.0.0",
         "@mantine/core": "^8.2",
         "@mantine/dropzone": "^8.2",
         "@mantine/form": "^8.2",
         "@mantine/modals": "^8.2",
         "@mantine/notifications": "^8.2",
         "@phosphor-icons/react": "^2.1.10",
-        "@sentry/nextjs": "^10.5.0",
-        "@tanstack/react-query": "^5.85.0",
+        "@sentry/nextjs": "^10.8.0",
+        "@tanstack/react-query": "^5.85.9",
         "@types/jsonwebtoken": "^9.0.10",
         "@types/papaparse": "^5.3.16",
         "@types/uuid": "^10.0.0",
@@ -61,17 +61,17 @@
         "aws-sdk": "^2.1692.0",
         "child_process": "^1.0.2",
         "clsx": "^2.1.1",
-        "dayjs": "^1.11.13",
+        "dayjs": "^1.11.18",
         "debug": "^4.4.1",
         "highlight.js": "^11.11.1",
         "jsonwebtoken": "^9.0.2",
         "kysely": "^0.28.5",
-        "kysely-ctl": "^0.15.1",
-        "libphonenumber-js": "^1.12.11",
+        "kysely-ctl": "^0.18.0",
+        "libphonenumber-js": "^1.12.15",
         "mailgun.js": "^12.0.3",
         "mantine-datatable": "^8.2.0",
         "mantine-form-zod-resolver": "^1.3.0",
-        "next": "^15.4.6",
+        "next": "^15.5.2",
         "next-swagger-doc": "^0.4",
         "papaparse": "^5.5.3",
         "pg": "^8.16.3",
@@ -84,25 +84,25 @@
         "server-only": "^0.0.1",
         "si-encryption": "github:safeinsights/encryption#75ea533d9d0fb7743b41ae22c8fce64492bfefec",
         "uuid": "^11.1.0",
-        "zod": "^4.0.17"
+        "zod": "^4.1.5"
     },
     "devDependencies": {
-        "@clerk/testing": "^1.10.12",
-        "@eslint/js": "^9.33.0",
-        "@next/eslint-plugin-next": "^15.4.6",
+        "@clerk/testing": "^1.12.3",
+        "@eslint/js": "^9.34.0",
+        "@next/eslint-plugin-next": "^15.5.2",
         "@octokit/rest": "^22.0.0",
-        "@pandacss/dev": "^1.0.1",
-        "@playwright/test": "^1.54",
-        "@testing-library/jest-dom": "^6.6.4",
+        "@pandacss/dev": "^1.2.0",
+        "@playwright/test": "^1.55",
+        "@testing-library/jest-dom": "^6.8.0",
         "@testing-library/react": "^16.3",
         "@testing-library/user-event": "^14.6.1",
         "@types/debug": "^4.1.12",
         "@types/minimist": "^1.2.5",
-        "@types/react": "19.1.10",
-        "@vitejs/plugin-react": "^5.0.0",
+        "@types/react": "19.1.12",
+        "@vitejs/plugin-react": "^5.0.2",
         "aws-sdk-client-mock": "^4.1.0",
         "dotenv": "*",
-        "eslint": "^9.33.0",
+        "eslint": "^9.34.0",
         "eslint-config-next": "*",
         "eslint-config-prettier": "*",
         "eslint-plugin-react": "^7.37.5",
@@ -110,15 +110,15 @@
         "happy-dom": "*",
         "husky": "^9.1.7",
         "kysely-codegen": "^0.18.5",
-        "lint-staged": "^16.1.5",
+        "lint-staged": "^16.1.6",
         "minimist": "^1.2.8",
         "monocart-reporter": "^2.9.21",
         "next-router-mock": "^1.0.2",
         "npm-run-all": "*",
         "pg-transactional-tests": "^1.2.0",
         "prettier": "*",
-        "tsx": "^4.20.4",
-        "typescript-eslint": "^8.39.1",
+        "tsx": "4.20.4",
+        "typescript-eslint": "^8.42.0",
         "vite-tsconfig-paths": "^5.1.4",
         "vitest": "*",
         "vitest-monocart-coverage": "^3.0.1"
