--- a/package.json
+++ b/package.json
@@ -135,6 +135,7 @@
     },
     "overrides": {
         "@types/react": "19.2.10",
-        "fast-xml-parser": ">=5.3.6"
+        "fast-xml-parser": ">=5.3.6",
+        "minimatch": ">=10.2.1"
     }
 }
